--- a/convertBehavToBIDS.ipynb
+++ b/convertBehavToBIDS.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -18,10 +18,7 @@
      "text": [
       "LST:\n",
       "APM:\n",
-      "VS:\n",
-      "fg tests:\n",
-      "Participants.tsv:\n",
-      "Dataset description:\n"
+      "VS:\n"
      ]
     }
    ],
@@ -36,13 +33,18 @@
     "BIDS_DIR = '/home/lukehearne/qm89_scratch/LSTBIDS/LST_bids/' # i.e., the output dir\n",
     "SUBJ_LIST = np.arange(1,66,1)\n",
     "\n",
+    "# exclusions\n",
+    "# subjects 1,3,16 should be excluded from everything\n",
+    "# subjects 32 & 44 had errors with the LST only (otherwise good)\n",
+    "# subjects 27 had no post resting-state (otherwise good)\n",
+    "LST_SUBJ_LIST = np.delete(SUBJ_LIST,np.array((1,3,16,32,44))-1)\n",
+    "SUBJ_LIST = np.delete(SUBJ_LIST,np.array((1,3,16))-1)\n",
+    "\n",
     "#--------#\n",
     "# LST ---#\n",
     "#--------#\n",
     "print('LST:')\n",
-    "# 3 16 32 44 are no good in the LST.\n",
-    "bad_subjs = np.array((3,16,32,44))\n",
-    "for subj in np.delete(SUBJ_LIST,bad_subjs-1):\n",
+    "for subj in LST_SUBJ_LIST:\n",
     "    #print('\\tSubj:',subj)\n",
     "    file = 'Sub_'+str(subj)+'_fMRI_LST_results.mat'\n",
     "    data = io.loadmat(RAW_DIR+file)\n",
@@ -100,7 +102,6 @@
     "                    + str(i) +'_events.tsv')\n",
     "        #print(filename)\n",
     "        df.to_csv(filename, index=False, sep='\\t',na_rep='n/a')\n",
-    "        \n",
     "#--------#\n",
     "# APM ---#\n",
     "#--------#\n",
@@ -223,19 +224,40 @@
     "\n",
     "json_filename = BIDS_DIR + 'phenotype/VisualSearch.json'\n",
     "with open(json_filename, 'w') as jsonFile:\n",
-    "    json.dump(meta, jsonFile, indent=4)\n",
-    "    \n",
+    "    json.dump(meta, jsonFile, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fg tests:\n"
+     ]
+    }
+   ],
+   "source": [
     "#------------------------#\n",
     "# Additional fg tests ---#\n",
     "#------------------------#\n",
     "print('fg tests:')\n",
     "df_fg = pd.read_csv(RAW_DIR + 'fluid_tests_fMRI.csv')\n",
-    "\n",
+    "# drop rows of not included subjects\n",
+    "_del = []\n",
+    "for i,sub in enumerate(df_fg['sub'].values):\n",
+    "    if np.sum(sub==SUBJ_LIST) == 0:\n",
+    "        _del.append(i)\n",
+    "df_fg.drop(df_fg.index[_del],inplace=True)\n",
+    "        \n",
     "# form boards\n",
     "tsv_filename = BIDS_DIR + 'phenotype/FormBoards.tsv'\n",
     "df = pd.DataFrame(index=subj_labels)\n",
-    "df['Total_correct'] = df_fg.loc[0:64,'FB-correct'].values\n",
-    "df['Total_incorrect'] = df_fg.loc[0:64,'FB-incorrect'].values\n",
+    "df['Total_correct'] = df_fg['FB-correct'].values\n",
+    "df['Total_incorrect'] = df_fg['FB-incorrect'].values\n",
     "df.to_csv(tsv_filename, sep='\\t', index_label='participant_id',na_rep='n/a')\n",
     "# create json\n",
     "# meta information\n",
@@ -256,8 +278,8 @@
     "# paper-folding\n",
     "tsv_filename = BIDS_DIR + 'phenotype/PaperFolding.tsv'\n",
     "df = pd.DataFrame(index=subj_labels)\n",
-    "df['Total_correct'] = df_fg.loc[0:64,'PF-correct'].values\n",
-    "df['Total_incorrect'] = df_fg.loc[0:64,'PF-incorrect'].values\n",
+    "df['Total_correct'] = df_fg['PF-correct'].values\n",
+    "df['Total_incorrect'] = df_fg['PF-incorrect'].values\n",
     "df.to_csv(tsv_filename, sep='\\t', index_label='participant_id',na_rep='n/a')\n",
     "# create json\n",
     "# meta information\n",
@@ -273,15 +295,48 @@
     "\n",
     "json_filename = BIDS_DIR + 'phenotype/PaperFolding.json'\n",
     "with open(json_filename, 'w') as jsonFile:\n",
-    "    json.dump(meta, jsonFile, indent=4)\n",
-    "    \n",
+    "    json.dump(meta, jsonFile, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Participants.tsv:\n",
+      "Dataset description:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/anaconda/5.1.0-Python3.6-gcc5/lib/python3.6/site-packages/ipykernel_launcher.py:14: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  \n"
+     ]
+    }
+   ],
+   "source": [
     "#----------------------------#\n",
     "# Create participants.tsv ---#\n",
     "#----------------------------#\n",
     "print('Participants.tsv:')\n",
     "df_demo = pd.read_csv(RAW_DIR + 'Project_Summary_DEIDENTIFIED.csv')\n",
-    "age = df_demo.loc[0:64,'Age'].values\n",
-    "sex = df_demo.loc[0:64,'Gender (M=1, F=2)']\n",
+    "_del = []\n",
+    "for i,sub in enumerate(df_demo['Sub Num'].values):\n",
+    "    if np.sum(sub==SUBJ_LIST) == 0:\n",
+    "        _del.append(i)\n",
+    "df_demo.drop(df_demo.index[_del],inplace=True)\n",
+    "\n",
+    "age = df_demo['Age'].values\n",
+    "sex = df_demo['Gender (M=1, F=2)']\n",
     "sex[sex==1] = 'M'\n",
     "sex[sex==2] = 'F'\n",
     "\n",
@@ -294,10 +349,10 @@
     "#-----------------------#\n",
     "tsv_filename = BIDS_DIR + 'phenotype/Extended_demographics.tsv'\n",
     "df = pd.DataFrame(index=subj_labels)\n",
-    "df['Years_of_education'] = df_demo.loc[0:64,'Years of Education'].values\n",
-    "df['Sudoku_experience'] = df_demo.loc[0:64,'Sudoku Score (1-5)'].values\n",
-    "df['Motivation_rating'] = df_demo.loc[0:64,'Motivation'].values\n",
-    "df['Sleep_rating'] = df_demo.loc[0:64,'Sleep Report (0=no, 1=mild, 2=yes)'].values\n",
+    "df['Years_of_education'] = df_demo['Years of Education'].values\n",
+    "df['Sudoku_experience'] = df_demo['Sudoku Score (1-5)'].values\n",
+    "df['Motivation_rating'] = df_demo['Motivation'].values\n",
+    "df['Sleep_rating'] = df_demo['Sleep Report (0=no, 1=mild, 2=yes)'].values\n",
     "df.to_csv(tsv_filename, sep='\\t', index_label='participant_id',na_rep='n/a')\n",
     "\n",
     "# create json\n",
@@ -365,77 +420,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "01\n",
-      "\t rest- 1 json file not found\n",
-      "01\n",
-      "\t rest- 2 json file not found\n",
-      "02\n",
-      "\t LST- 1 json file not found\n",
-      "04\n",
-      "\t LST- 2 json file not found\n",
-      "04\n",
-      "\t rest- 1 json file not found\n",
-      "04\n",
-      "\t rest- 2 json file not found\n",
-      "06\n",
-      "\t LST- 1 json file not found\n",
-      "06\n",
-      "\t LST- 2 json file not found\n",
-      "06\n",
-      "\t LST- 3 json file not found\n",
-      "06\n",
-      "\t rest- 1 json file not found\n",
-      "07\n",
-      "\t LST- 1 json file not found\n",
-      "08\n",
-      "\t LST- 2 json file not found\n",
-      "08\n",
-      "\t rest- 2 json file not found\n",
-      "09\n",
-      "\t LST- 1 json file not found\n",
-      "09\n",
-      "\t LST- 2 json file not found\n",
-      "09\n",
-      "\t rest- 2 json file not found\n",
-      "12\n",
-      "\t LST- 1 json file not found\n",
-      "16\n",
-      "\t LST- 1 json file not found\n",
-      "16\n",
-      "\t LST- 2 json file not found\n",
-      "16\n",
-      "\t LST- 3 json file not found\n",
-      "16\n",
-      "\t rest- 1 json file not found\n",
-      "16\n",
-      "\t rest- 2 json file not found\n",
-      "19\n",
-      "\t LST- 1 json file not found\n",
-      "21\n",
-      "\t LST- 2 json file not found\n",
-      "22\n",
-      "\t LST- 1 json file not found\n",
-      "23\n",
-      "\t LST- 1 json file not found\n",
-      "24\n",
-      "\t LST- 1 json file not found\n",
-      "26\n",
-      "\t LST- 2 json file not found\n",
-      "26\n",
-      "\t rest- 1 json file not found\n",
-      "26\n",
-      "\t rest- 2 json file not found\n",
       "27\n",
       "\t rest- 2 json file not found\n",
-      "65\n",
-      "\t rest- 1 json file not found\n"
+      "32\n",
+      "\t LST- 1 json file not found\n",
+      "32\n",
+      "\t LST- 2 json file not found\n",
+      "32\n",
+      "\t LST- 3 json file not found\n",
+      "44\n",
+      "\t LST- 1 json file not found\n",
+      "44\n",
+      "\t LST- 2 json file not found\n",
+      "44\n",
+      "\t LST- 3 json file not found\n"
      ]
     }
    ],
